Fix overlapping CPP keywords
This commit fixes overlapping keywords in the CPP Docs

--- a/scss/_sphinx_base.scss
+++ b/scss/_sphinx_base.scss
@@ -449,9 +449,8 @@ article.pytorch-article {
     dt {
       border-left: none;
       border-top: 3px solid $red_orange;
-      padding-left: 4em;
+      padding-left: 0.5em;
       em.property {
-        position: absolute;
         left: 0.5rem;
       }
     }
